labs/003-K8S-Cluster-Setup/manifests/link-unshorten-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # A Deployment named link-unshorten is created using the metadata: name field
  name: link-unshorten
  # We give the deployment a label 
  labels:
    app: unshorten-api
spec:
  # One replica of the Pod is created
  replicas: 2
  # The selector field defines how our link-unshorten deployment finds which pods to manage. In this example we select on the label previously created called app: unshorten-api
  selector:
    matchLabels:
      app: unshorten-api
  template: 
    metadata:
      labels:
        # We label all Pods in this deployment as app: unshorten-api
        app: unshorten-api
    # template: spec will indicate which containers will run in our Pod
    spec:
      containers:
      - name: unshorten-api-container
        image: "jmbmxer/link-unshorten:0.1"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      # # You can even have multiple containers running in a Pod
      # - name: unshorten-redis-cache
      #   image: redis
      #   ports:
      #   - containerPort: 6379
      #     name: redis
      #     protocol: TCP
