labs/003-K8S-Cluster-Setup/manifests/link-unshorten-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: link-unshorten-ingress
spec:
  backend:
    serviceName: link-unshorten-service
    servicePort: 80
